tests/typing/good/testfile-block-1.scala
class C() { var x = {} }
object Main { def main(args: Array[String]) { } }
