tests/typing/bad/testfile-extends-2.scala

class C extends Boolean {}
object Main { def main(args: Array[String]) { } }
